// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build basic > dist > app.js 1`] = `
"App({globalData:{},onLaunch(){}});
"
`;

exports[`build basic > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json"
}"
`;

exports[`build basic > dist > app.wxss 1`] = `
".app{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > components/Navbar/Navbar.js 1`] = `
"Component({});
"
`;

exports[`build basic > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`build basic > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`build basic > dist > components/Navbar/Navbar.wxss 1`] = `
".navbar{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > pages/index/index.js 1`] = `
"Page({});
"
`;

exports[`build basic > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`build basic > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`build basic > dist > pages/index/index.wxss 1`] = `
".page{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`build basic > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`build basic > dist 1`] = `
[
  "app.js",
  "app.json",
  "app.wxss",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Navbar/Navbar.wxss",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "pages/index/index.wxss",
  "sitemap.json",
  "theme.json",
]
`;

exports[`tabbar-appbar > dist > app.js 1`] = `
"App({globalData:{},onLaunch(){}});
"
`;

exports[`tabbar-appbar > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json",
  "tabBar": {
    "custom": true
  },
  "appBar": {},
  "usingComponents": {
    "Test": "/components/Test"
  }
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > app-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.wxml 1`] = `"<view>hello weapp-vite! from app-bar</view>"`;

exports[`tabbar-appbar > dist > app-bar/index.wxss 1`] = `
".ss{color:red}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > async2-D81jY5iE.js 1`] = `
"Object.defineProperty(exports,Symbol.toStringTag,{value:"Module"});const n="async2",a=2;exports.async2=n;exports.default=a;
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`tabbar-appbar > dist > components/Test/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Test/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Test/index.wxml 1`] = `"<view>Navbar</view>"`;

exports[`tabbar-appbar > dist > components/Test/index.wxss 1`] = `
".test{clear:both}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.js 1`] = `
"const _=require("../other-BcprOjgc.js"),e=_.__CJS__export_default__||_.__CJS__import__0__;Component({lifetimes:{attached(){console.log(e)}}});
"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxml 1`] = `"<view class="pb-8 pt-4 bg-[#af6ec5] flex justify-center">hello weapp-vite! aa</view>"`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxss 1`] = `
".a{color:red}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > other-BcprOjgc.js 1`] = `
"var _={exports:{}};const t="other";_.exports={other:t};const e=(_.exports==null?{}:_.exports).default||_.exports,o=Object.freeze(Object.defineProperty({__proto__:null,default:e},Symbol.toStringTag,{value:"Module"}));exports.__CJS__export_default__=e;exports.__CJS__import__0__=o;
"
`;

exports[`tabbar-appbar > dist > pages/index/index.js 1`] = `
"const o=require("../../other-BcprOjgc.js"),_=3,{part:r}=_,{other:a}=o.__CJS__export_default__||o.__CJS__import__0__;Page({async onLoad(){const e=await require.async("./async"),t=await Promise.resolve().then(()=>require("../../async2-D81jY5iE.js"));console.log(r,a,e,t)}});
"
`;

exports[`tabbar-appbar > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`tabbar-appbar > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`tabbar-appbar > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`tabbar-appbar > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`tabbar-appbar > dist 1`] = `
[
  "app-bar/index.js",
  "app-bar/index.json",
  "app-bar/index.wxml",
  "app-bar/index.wxss",
  "app.js",
  "app.json",
  "async2-D81jY5iE.js",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Test/index.js",
  "components/Test/index.json",
  "components/Test/index.wxml",
  "components/Test/index.wxss",
  "custom-tab-bar/index.js",
  "custom-tab-bar/index.json",
  "custom-tab-bar/index.wxml",
  "custom-tab-bar/index.wxss",
  "other-BcprOjgc.js",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "sitemap.json",
  "theme.json",
]
`;
